@@ -22,6 +22,8 @@ import static org.apache.iceberg.types.Types.NestedField.required;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyMap;
+import static org.mockito.ArgumentMatchers.argThat;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.atLeastOnce;
 import static org.mockito.Mockito.times;
@@ -32,7 +34,9 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
+import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Optional;
 import java.util.UUID;
 import java.util.concurrent.TimeUnit;
@@ -65,7 +69,7 @@ import org.apache.iceberg.inmemory.InMemoryCatalog;
 import org.apache.iceberg.relocated.com.google.common.collect.ImmutableMap;
 import org.apache.iceberg.relocated.com.google.common.collect.Lists;
 import org.apache.iceberg.relocated.com.google.common.collect.Maps;
-import org.apache.iceberg.rest.RESTCatalogAdapter.HTTPMethod;
+import org.apache.iceberg.rest.HTTPRequest.HTTPMethod;
 import org.apache.iceberg.rest.RESTSessionCatalog.SnapshotMode;
 import org.apache.iceberg.rest.auth.AuthSessionUtil;
 import org.apache.iceberg.rest.auth.OAuth2Properties;
@@ -115,35 +119,31 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
         "in-memory",
         ImmutableMap.of(CatalogProperties.WAREHOUSE_LOCATION, warehouse.getAbsolutePath()));
 
-    Map<String, String> catalogHeaders =
-        ImmutableMap.of("Authorization", "Bearer client-credentials-token:sub=catalog");
-    Map<String, String> contextHeaders =
-        ImmutableMap.of("Authorization", "Bearer client-credentials-token:sub=user");
+    HTTPHeaders catalogHeaders =
+        HTTPHeaders.of(Map.of("Authorization", "Bearer client-credentials-token:sub=catalog"));
+    HTTPHeaders contextHeaders =
+        HTTPHeaders.of(Map.of("Authorization", "Bearer client-credentials-token:sub=user"));
 
     RESTCatalogAdapter adaptor =
         new RESTCatalogAdapter(backendCatalog) {
           @Override
           public <T extends RESTResponse> T execute(
-              RESTCatalogAdapter.HTTPMethod method,
-              String path,
-              Map<String, String> queryParams,
-              Object body,
+              HTTPRequest request,
               Class<T> responseType,
-              Map<String, String> headers,
-              Consumer<ErrorResponse> errorHandler) {
+              Consumer<ErrorResponse> errorHandler,
+              Consumer<Map<String, String>> responseHeaders) {
             // this doesn't use a Mockito spy because this is used for catalog tests, which have
             // different method calls
-            if (!"v1/oauth/tokens".equals(path)) {
-              if ("v1/config".equals(path)) {
-                assertThat(headers).containsAllEntriesOf(catalogHeaders);
+            if (!"v1/oauth/tokens".equals(request.path())) {
+              if ("v1/config".equals(request.path())) {
+                assertThat(request.headers().entries()).containsAll(catalogHeaders.entries());
               } else {
-                assertThat(headers).containsAllEntriesOf(contextHeaders);
+                assertThat(request.headers().entries()).containsAll(contextHeaders.entries());
               }
             }
-            Object request = roundTripSerialize(body, "request");
-            T response =
-                super.execute(
-                    method, path, queryParams, request, responseType, headers, errorHandler);
+            Object body = roundTripSerialize(request.body(), "request");
+            HTTPRequest req = ImmutableHTTPRequest.builder().from(request).body(body).build();
+            T response = super.execute(req, responseType, errorHandler, responseHeaders);
             T responseAfterSerialization = roundTripSerialize(response, "response");
             return responseAfterSerialization;
           }
@@ -259,13 +259,12 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     RESTClient testClient =
         new RESTCatalogAdapter(backendCatalog) {
           @Override
-          public <T extends RESTResponse> T get(
-              String path,
-              Map<String, String> queryParams,
+          public <T extends RESTResponse> T execute(
+              HTTPRequest request,
               Class<T> responseType,
-              Map<String, String> headers,
-              Consumer<ErrorResponse> errorHandler) {
-            if ("v1/config".equals(path)) {
+              Consumer<ErrorResponse> errorHandler,
+              Consumer<Map<String, String>> responseHeaders) {
+            if ("v1/config".equals(request.path())) {
               return castResponse(
                   responseType,
                   ConfigResponse.builder()
@@ -275,10 +274,11 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                               CatalogProperties.CACHE_ENABLED,
                               "false",
                               CatalogProperties.WAREHOUSE_LOCATION,
-                              queryParams.get(CatalogProperties.WAREHOUSE_LOCATION) + "warehouse"))
+                              request.queryParameters().get(CatalogProperties.WAREHOUSE_LOCATION)
+                                  + "warehouse"))
                       .build());
             }
-            return super.get(path, queryParams, responseType, headers, errorHandler);
+            return super.execute(request, responseType, errorHandler, responseHeaders);
           }
         };
 
@@ -337,21 +337,15 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // the bearer token should be used for all interactions
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", catalogHeaders),
             any(),
             any(),
-            any(),
-            eq(catalogHeaders),
             any());
   }
 
@@ -373,32 +367,23 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // no token or credential for catalog token exchange
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq("v1/oauth/tokens"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, "v1/oauth/tokens", emptyHeaders),
             eq(OAuthTokenResponse.class),
-            eq(emptyHeaders),
+            any(),
             any());
     // no token or credential for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the catalog token for all interactions
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", catalogHeaders),
             any(),
             any(),
-            any(),
-            eq(catalogHeaders),
             any());
   }
 
@@ -428,32 +413,23 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // no token or credential for catalog token exchange
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, emptyHeaders),
             eq(OAuthTokenResponse.class),
-            eq(emptyHeaders),
+            any(),
             any());
     // no token or credential for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the catalog token for all interactions
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", catalogHeaders),
             any(),
             any(),
-            any(),
-            eq(catalogHeaders),
             any());
   }
 
@@ -489,32 +465,23 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // use the bearer token for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the bearer token to fetch the context token
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
             eq(OAuthTokenResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the context token for table existence check
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", contextHeaders),
             any(),
             any(),
-            any(),
-            eq(contextHeaders),
             any());
   }
 
@@ -552,42 +519,30 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // call client credentials with no initial auth
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, emptyHeaders),
             eq(OAuthTokenResponse.class),
-            eq(emptyHeaders),
+            any(),
             any());
     // use the client credential token for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the client credential to fetch the context token
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
             eq(OAuthTokenResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the context token for table existence check
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", contextHeaders),
             any(),
             any(),
-            any(),
-            eq(contextHeaders),
             any());
   }
 
@@ -627,42 +582,30 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // use the bearer token for client credentials
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, initHeaders),
             eq(OAuthTokenResponse.class),
-            eq(initHeaders),
+            any(),
             any());
     // use the client credential token for config
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the client credential to fetch the context token
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
             eq(OAuthTokenResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // use the context token for table existence check
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", contextHeaders),
             any(),
             any(),
-            any(),
-            eq(contextHeaders),
             any());
   }
 
@@ -822,12 +765,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
 
     // token passes a static token. otherwise, validate a client credentials or token exchange
@@ -835,34 +775,22 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     if (!credentials.containsKey("token")) {
       Mockito.verify(adapter)
           .execute(
-              eq(HTTPMethod.POST),
-              eq(oauth2ServerUri),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
               eq(OAuthTokenResponse.class),
-              eq(catalogHeaders),
+              any(),
               any());
     }
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", expectedHeaders),
             any(),
             any(),
-            any(),
-            eq(expectedHeaders),
             any());
     if (!optionalOAuthParams.isEmpty()) {
       Mockito.verify(adapter)
-          .execute(
-              eq(HTTPMethod.POST),
+          .postForm(
               eq(oauth2ServerUri),
-              any(),
-              Mockito.argThat(
-                  body ->
-                      ((Map<String, String>) body)
-                          .keySet()
-                          .containsAll(optionalOAuthParams.keySet())),
+              Mockito.argThat(body -> body.keySet().containsAll(optionalOAuthParams.keySet())),
               eq(OAuthTokenResponse.class),
               eq(catalogHeaders),
               any());
@@ -984,10 +912,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     Mockito.doAnswer(refsAnswer)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -998,10 +923,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // verify that the table was loaded with the refs argument
     verify(adapter, times(1))
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1010,10 +932,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     assertThat(refsTables.snapshots()).containsExactlyInAnyOrderElementsOf(table.snapshots());
     verify(adapter, times(1))
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "all")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "all")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1110,10 +1029,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     Mockito.doAnswer(refsAnswer)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1124,10 +1040,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // verify that the table was loaded with the refs argument
     verify(adapter, times(1))
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1137,10 +1050,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
         .containsExactlyInAnyOrderElementsOf(table.snapshots());
     verify(adapter, times(1))
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "all")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "all")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1226,10 +1136,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     Mockito.doAnswer(refsAnswer)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq(paths.table(TABLE)),
-            eq(ImmutableMap.of("snapshots", "refs")),
-            any(),
+            reqMatcher(HTTPMethod.GET, paths.table(TABLE), Map.of(), Map.of("snapshots", "refs")),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -1267,23 +1174,17 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     Mockito.doAnswer(addTableConfig)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq("v1/namespaces/ns/tables"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, "v1/namespaces/ns/tables", expectedContextHeaders),
             eq(LoadTableResponse.class),
-            eq(expectedContextHeaders),
+            any(),
             any());
 
     Mockito.doAnswer(addTableConfig)
         .when(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/namespaces/ns/tables/table"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/namespaces/ns/tables/table", expectedContextHeaders),
             eq(LoadTableResponse.class),
-            eq(expectedContextHeaders),
+            any(),
             any());
 
     SessionCatalog.SessionContext context =
@@ -1324,33 +1225,24 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
     // session client credentials flow
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, oauth2ServerUri, catalogHeaders),
             eq(OAuthTokenResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
 
     // create table request
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq("v1/namespaces/ns/tables"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, "v1/namespaces/ns/tables", expectedContextHeaders),
             eq(LoadTableResponse.class),
-            eq(expectedContextHeaders),
+            any(),
             any());
 
     // if the table returned a bearer token or a credential, there will be no token request
@@ -1358,12 +1250,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
       // token exchange to get a table token
       Mockito.verify(adapter, times(1))
           .execute(
-              eq(HTTPMethod.POST),
-              eq(oauth2ServerUri),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.POST, oauth2ServerUri, expectedContextHeaders),
               eq(OAuthTokenResponse.class),
-              eq(expectedContextHeaders),
+              any(),
               any());
     }
 
@@ -1371,34 +1260,25 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
       // load table from catalog + refresh loaded table
       Mockito.verify(adapter, times(2))
           .execute(
-              eq(HTTPMethod.GET),
-              eq("v1/namespaces/ns/tables/table"),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.GET, "v1/namespaces/ns/tables/table", expectedTableHeaders),
               eq(LoadTableResponse.class),
-              eq(expectedTableHeaders),
+              any(),
               any());
     } else {
       // load table from catalog
       Mockito.verify(adapter)
           .execute(
-              eq(HTTPMethod.GET),
-              eq("v1/namespaces/ns/tables/table"),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.GET, "v1/namespaces/ns/tables/table", expectedContextHeaders),
               eq(LoadTableResponse.class),
-              eq(expectedContextHeaders),
+              any(),
               any());
 
       // refresh loaded table
       Mockito.verify(adapter)
           .execute(
-              eq(HTTPMethod.GET),
-              eq("v1/namespaces/ns/tables/table"),
-              any(),
-              any(),
+              reqMatcher(HTTPMethod.GET, "v1/namespaces/ns/tables/table", expectedTableHeaders),
               eq(LoadTableResponse.class),
-              eq(expectedTableHeaders),
+              any(),
               any());
     }
   }
@@ -1426,14 +1306,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> contextCredentials = ImmutableMap.of();
     SessionCatalog.SessionContext context =
@@ -1458,23 +1331,17 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
               // call client credentials with no initial auth
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.POST, oauth2ServerUri, emptyHeaders),
                       eq(OAuthTokenResponse.class),
-                      eq(emptyHeaders),
+                      any(),
                       any());
 
               // use the client credential token for config
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.GET),
-                      eq("v1/config"),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
                       eq(ConfigResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify the first token exchange
@@ -1486,12 +1353,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "scope", "catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          catalogHeaders,
+                          Map.of(),
+                          firstRefreshRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify that a second exchange occurs
@@ -1508,12 +1377,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "Bearer token-exchange-token:sub=client-credentials-token:sub=catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(secondRefreshRequest::equals),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          secondRefreshHeaders,
+                          Map.of(),
+                          secondRefreshRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(secondRefreshHeaders),
+                      any(),
                       any());
             });
   }
@@ -1541,14 +1412,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> contextCredentials = ImmutableMap.of();
     SessionCatalog.SessionContext context =
@@ -1574,25 +1438,30 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
               assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
 
               // call client credentials with no initial auth
+              Map<String, String> clientCredentialsRequest =
+                  ImmutableMap.of(
+                      "grant_type", "client_credentials",
+                      "client_id", "catalog",
+                      "client_secret", "secret",
+                      "scope", "catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      any(),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          emptyHeaders,
+                          Map.of(),
+                          clientCredentialsRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(emptyHeaders),
+                      any(),
                       any());
 
               // use the client credential token for config
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.GET),
-                      eq("v1/config"),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
                       eq(ConfigResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify the first token exchange
@@ -1604,12 +1473,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "scope", "catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          catalogHeaders,
+                          Map.of(),
+                          firstRefreshRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // use the refreshed context token for table existence check
@@ -1619,12 +1490,10 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "Bearer token-exchange-token:sub=client-credentials-token:sub=catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.HEAD),
-                      eq("v1/namespaces/ns/tables/table"),
+                      reqMatcher(
+                          HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", refreshedCatalogHeader),
                       any(),
                       any(),
-                      any(),
-                      eq(refreshedCatalogHeader),
                       any());
             });
   }
@@ -1680,24 +1549,25 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
 
     // call client credentials with no initial auth
+    Map<String, String> clientCredentialsRequest =
+        ImmutableMap.of(
+            "grant_type", "client_credentials",
+            "client_id", "catalog",
+            "client_secret", "12345",
+            "scope", "catalog");
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
+            reqMatcher(
+                HTTPMethod.POST, oauth2ServerUri, emptyHeaders, Map.of(), clientCredentialsRequest),
             eq(OAuthTokenResponse.class),
-            eq(emptyHeaders),
+            any(),
             any());
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
 
     Map<String, String> firstRefreshRequest =
@@ -1708,12 +1578,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             "scope", "catalog");
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            Mockito.argThat(firstRefreshRequest::equals),
+            reqMatcher(
+                HTTPMethod.POST,
+                oauth2ServerUri,
+                OAuth2Util.basicAuthHeaders(credential),
+                Map.of(),
+                firstRefreshRequest),
             eq(OAuthTokenResponse.class),
-            eq(OAuth2Util.basicAuthHeaders(credential)),
+            any(),
             any());
 
     // verify that a second exchange occurs
@@ -1725,22 +1597,24 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             "scope", "catalog");
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            Mockito.argThat(secondRefreshRequest::equals),
+            reqMatcher(
+                HTTPMethod.POST,
+                oauth2ServerUri,
+                OAuth2Util.basicAuthHeaders(credential),
+                Map.of(),
+                secondRefreshRequest),
             eq(OAuthTokenResponse.class),
-            eq(OAuth2Util.basicAuthHeaders(credential)),
+            any(),
             any());
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(
+                HTTPMethod.HEAD,
+                "v1/namespaces/ns/tables/table",
+                Map.of("Authorization", "Bearer token-exchange-token:sub=" + token)),
             any(),
             any(),
-            any(),
-            eq(ImmutableMap.of("Authorization", "Bearer token-exchange-token:sub=" + token)),
             any());
   }
 
@@ -1767,22 +1641,17 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/ns/tables/table"),
+            reqMatcher(
+                HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", OAuth2Util.authHeaders(token)),
             any(),
             any(),
-            any(),
-            eq(OAuth2Util.authHeaders(token)),
             any());
   }
 
@@ -1812,14 +1681,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> firstRefreshRequest =
         ImmutableMap.of(
@@ -1831,11 +1693,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     // simulate that the token expired when it was about to be refreshed
     Mockito.doThrow(new RuntimeException("token expired"))
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
+        .postForm(
             eq(oauth2ServerUri),
-            any(),
-            Mockito.argThat(firstRefreshRequest::equals),
+            argThat(firstRefreshRequest::equals),
             eq(OAuthTokenResponse.class),
             eq(catalogHeaders),
             any());
@@ -1867,35 +1727,38 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
               assertThat(catalog.tableExists(TableIdentifier.of("ns", "table"))).isFalse();
 
               // call client credentials with no initial auth
+              Map<String, String> clientCredentialsRequest =
+                  ImmutableMap.of(
+                      "grant_type", "client_credentials",
+                      "client_id", "catalog",
+                      "client_secret", "secret",
+                      "scope", "catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.POST),
-                      eq(oauth2ServerUri),
-                      any(),
-                      any(),
+                      reqMatcher(
+                          HTTPMethod.POST,
+                          oauth2ServerUri,
+                          emptyHeaders,
+                          Map.of(),
+                          clientCredentialsRequest),
                       eq(OAuthTokenResponse.class),
-                      eq(emptyHeaders),
+                      any(),
                       any());
 
               // use the client credential token for config
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.GET),
-                      eq("v1/config"),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
                       eq(ConfigResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify the first token exchange - since an exception is thrown, we're performing
               // retries
               Mockito.verify(adapter, times(2))
-                  .execute(
-                      eq(HTTPMethod.POST),
+                  .postForm(
                       eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      argThat(firstRefreshRequest::equals),
                       eq(OAuthTokenResponse.class),
                       eq(catalogHeaders),
                       any());
@@ -1903,11 +1766,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
               // here we make sure that the basic auth header is used after token refresh retries
               // failed
               Mockito.verify(adapter)
-                  .execute(
-                      eq(HTTPMethod.POST),
+                  .postForm(
                       eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      argThat(firstRefreshRequest::equals),
                       eq(OAuthTokenResponse.class),
                       eq(basicHeaders),
                       any());
@@ -1919,12 +1780,10 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "Bearer token-exchange-token:sub=client-credentials-token:sub=catalog");
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.HEAD),
-                      eq("v1/namespaces/ns/tables/table"),
+                      reqMatcher(
+                          HTTPMethod.HEAD, "v1/namespaces/ns/tables/table", refreshedCatalogHeader),
                       any(),
                       any(),
-                      any(),
-                      eq(refreshedCatalogHeader),
                       any());
             });
   }
@@ -1952,14 +1811,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> contextCredentials = ImmutableMap.of();
     SessionCatalog.SessionContext context =
@@ -1986,11 +1838,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             () -> {
               // call client credentials with no initial auth
               Mockito.verify(adapter)
-                  .execute(
-                      eq(HTTPMethod.POST),
+                  .postForm(
                       eq(oauth2ServerUri),
-                      any(),
-                      any(),
+                      anyMap(),
                       eq(OAuthTokenResponse.class),
                       eq(emptyHeaders),
                       any());
@@ -1998,12 +1848,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
               // use the client credential token for config
               Mockito.verify(adapter)
                   .execute(
-                      eq(HTTPMethod.GET),
-                      eq("v1/config"),
-                      any(),
-                      any(),
+                      reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
                       eq(ConfigResponse.class),
-                      eq(catalogHeaders),
+                      any(),
                       any());
 
               // verify the token exchange uses the right scope
@@ -2014,11 +1861,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
                       "subject_token_type", "urn:ietf:params:oauth:token-type:access_token",
                       "scope", scope);
               Mockito.verify(adapter)
-                  .execute(
-                      eq(HTTPMethod.POST),
+                  .postForm(
                       eq(oauth2ServerUri),
-                      any(),
-                      Mockito.argThat(firstRefreshRequest::equals),
+                      argThat(firstRefreshRequest::equals),
                       eq(OAuthTokenResponse.class),
                       eq(catalogHeaders),
                       any());
@@ -2047,14 +1892,7 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.doAnswer(addOneSecondExpiration)
         .when(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
-            eq(oauth2ServerUri),
-            any(),
-            any(),
-            eq(OAuthTokenResponse.class),
-            any(),
-            any());
+        .postForm(eq(oauth2ServerUri), anyMap(), eq(OAuthTokenResponse.class), anyMap(), any());
 
     Map<String, String> contextCredentials = ImmutableMap.of();
     SessionCatalog.SessionContext context =
@@ -2076,12 +1914,9 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
   }
 
@@ -2122,23 +1957,18 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             "scope",
             "catalog");
     Mockito.verify(adapter)
-        .execute(
-            eq(HTTPMethod.POST),
+        .postForm(
             eq(oauth2ServerUri),
-            any(),
-            Mockito.argThat(fetchTokenFromCredential::equals),
+            argThat(fetchTokenFromCredential::equals),
             eq(OAuthTokenResponse.class),
             eq(ImmutableMap.of()),
             any());
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", catalogHeaders),
             eq(ConfigResponse.class),
-            eq(catalogHeaders),
+            any(),
             any());
   }
 
@@ -2311,20 +2141,14 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
             eq(ConfigResponse.class),
             any(),
             any());
 
     Mockito.verify(adapter, times(numberOfItems))
         .execute(
-            eq(HTTPMethod.POST),
-            eq("v1/namespaces"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.POST, "v1/namespaces", Map.of(), Map.of()),
             eq(CreateNamespaceResponse.class),
             any(),
             any());
@@ -2375,20 +2199,18 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
             eq(ConfigResponse.class),
             any(),
             any());
 
     Mockito.verify(adapter, times(numberOfItems))
         .execute(
-            eq(HTTPMethod.POST),
-            eq(String.format("v1/namespaces/%s/tables", namespaceName)),
-            any(),
-            any(),
+            reqMatcher(
+                HTTPMethod.POST,
+                String.format("v1/namespaces/%s/tables", namespaceName),
+                Map.of(),
+                Map.of()),
             eq(LoadTableResponse.class),
             any(),
             any());
@@ -2436,21 +2258,27 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
             .build();
 
     Table table = catalog.loadTable(TABLE);
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
     Mockito.doThrow(new NotAuthorizedException("not authorized"))
         .when(adapter)
-        .post(any(), any(), any(), any(Map.class), any());
+        .execute(reqMatcher(HTTPMethod.POST), any(), any(), any());
     assertThatThrownBy(() -> catalog.loadTable(TABLE).newFastAppend().appendFile(file).commit())
         .isInstanceOf(NotAuthorizedException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(TABLE)), captor.capture(), any(), any(Map.class), any());
 
     // Extract the UpdateTableRequest to determine the path of the manifest list that should be
     // cleaned up
-    UpdateTableRequest request = captor.getValue();
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) request.updates().get(0);
-    assertThatThrownBy(() -> table.io().newInputFile(addSnapshot.snapshot().manifestListLocation()))
-        .isInstanceOf(NotFoundException.class);
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(TABLE));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest body = (UpdateTableRequest) req.body();
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) body.updates().get(0);
+              assertThatThrownBy(
+                      () -> table.io().newInputFile(addSnapshot.snapshot().manifestListLocation()))
+                  .isInstanceOf(NotFoundException.class);
+            });
   }
 
   @Test
@@ -2465,21 +2293,26 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     catalog.createTable(TABLE, SCHEMA);
     Table table = catalog.loadTable(TABLE);
 
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
     Mockito.doThrow(new ServiceFailureException("some service failure"))
         .when(adapter)
-        .post(any(), any(), any(), any(Map.class), any());
+        .execute(reqMatcher(HTTPMethod.POST), any(), any(), any());
     assertThatThrownBy(() -> catalog.loadTable(TABLE).newFastAppend().appendFile(FILE_A).commit())
         .isInstanceOf(ServiceFailureException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(TABLE)), captor.capture(), any(), any(Map.class), any());
 
     // Extract the UpdateTableRequest to determine the path of the manifest list that should still
     // exist even though the commit failed
-    UpdateTableRequest request = captor.getValue();
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) request.updates().get(0);
-    assertThat(table.io().newInputFile(addSnapshot.snapshot().manifestListLocation()).exists())
-        .isTrue();
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(TABLE));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest body = (UpdateTableRequest) req.body();
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) body.updates().get(0);
+              String manifestListLocation = addSnapshot.snapshot().manifestListLocation();
+              assertThat(table.io().newInputFile(manifestListLocation).exists()).isTrue();
+            });
   }
 
   @Test
@@ -2493,32 +2326,38 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     catalog.createTable(TABLE, SCHEMA);
     TableIdentifier newTable = TableIdentifier.of(TABLE.namespace(), "some_table");
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
     Mockito.doThrow(new NotAuthorizedException("not authorized"))
         .when(adapter)
-        .post(eq(RESOURCE_PATHS.table(newTable)), any(), any(), any(Map.class), any());
+        .execute(reqMatcher(HTTPMethod.POST, RESOURCE_PATHS.table(newTable)), any(), any(), any());
 
     Transaction createTableTransaction = catalog.newCreateTableTransaction(newTable, SCHEMA);
     createTableTransaction.newAppend().appendFile(FILE_A).commit();
     assertThatThrownBy(createTableTransaction::commitTransaction)
         .isInstanceOf(NotAuthorizedException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(newTable)), captor.capture(), any(), any(Map.class), any());
-    UpdateTableRequest request = captor.getValue();
-    Optional<MetadataUpdate> appendSnapshot =
-        request.updates().stream()
-            .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
-            .findFirst();
 
-    assertThat(appendSnapshot).isPresent();
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) appendSnapshot.get();
-    assertThatThrownBy(
-            () ->
-                catalog
-                    .loadTable(TABLE)
-                    .io()
-                    .newInputFile(addSnapshot.snapshot().manifestListLocation()))
-        .isInstanceOf(NotFoundException.class);
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(newTable));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest body = (UpdateTableRequest) req.body();
+              Optional<MetadataUpdate> appendSnapshot =
+                  body.updates().stream()
+                      .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
+                      .findFirst();
+
+              assertThat(appendSnapshot).isPresent();
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) appendSnapshot.get();
+              assertThatThrownBy(
+                      () ->
+                          catalog
+                              .loadTable(TABLE)
+                              .io()
+                              .newInputFile(addSnapshot.snapshot().manifestListLocation()))
+                  .isInstanceOf(NotFoundException.class);
+            });
   }
 
   @Test
@@ -2534,29 +2373,32 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     TableIdentifier newTable = TableIdentifier.of(TABLE.namespace(), "some_table");
     Mockito.doThrow(new ServiceFailureException("some service failure"))
         .when(adapter)
-        .post(eq(RESOURCE_PATHS.table(newTable)), any(), any(), any(Map.class), any());
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
+        .execute(reqMatcher(HTTPMethod.POST, RESOURCE_PATHS.table(newTable)), any(), any(), any());
+
     Transaction createTableTransaction = catalog.newCreateTableTransaction(newTable, SCHEMA);
     createTableTransaction.newAppend().appendFile(FILE_A).commit();
     assertThatThrownBy(createTableTransaction::commitTransaction)
         .isInstanceOf(ServiceFailureException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(newTable)), captor.capture(), any(), any(Map.class), any());
-    UpdateTableRequest request = captor.getValue();
-    Optional<MetadataUpdate> appendSnapshot =
-        request.updates().stream()
-            .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
-            .findFirst();
-    assertThat(appendSnapshot).isPresent();
 
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) appendSnapshot.get();
-    assertThat(
-            catalog
-                .loadTable(TABLE)
-                .io()
-                .newInputFile(addSnapshot.snapshot().manifestListLocation())
-                .exists())
-        .isTrue();
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(newTable));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest body = (UpdateTableRequest) req.body();
+              Optional<MetadataUpdate> appendSnapshot =
+                  body.updates().stream()
+                      .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
+                      .findFirst();
+              assertThat(appendSnapshot).isPresent();
+
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) appendSnapshot.get();
+              String manifestListLocation = addSnapshot.snapshot().manifestListLocation();
+              assertThat(catalog.loadTable(TABLE).io().newInputFile(manifestListLocation).exists())
+                  .isTrue();
+            });
   }
 
   @Test
@@ -2569,32 +2411,35 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     }
 
     catalog.createTable(TABLE, SCHEMA);
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
     Mockito.doThrow(new NotAuthorizedException("not authorized"))
         .when(adapter)
-        .post(eq(RESOURCE_PATHS.table(TABLE)), any(), any(), any(Map.class), any());
+        .execute(reqMatcher(HTTPMethod.POST, RESOURCE_PATHS.table(TABLE)), any(), any(), any());
 
     Transaction replaceTableTransaction = catalog.newReplaceTableTransaction(TABLE, SCHEMA, false);
     replaceTableTransaction.newAppend().appendFile(FILE_A).commit();
     assertThatThrownBy(replaceTableTransaction::commitTransaction)
         .isInstanceOf(NotAuthorizedException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(TABLE)), captor.capture(), any(), any(Map.class), any());
-    UpdateTableRequest request = captor.getValue();
-    Optional<MetadataUpdate> appendSnapshot =
-        request.updates().stream()
-            .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
-            .findFirst();
 
-    assertThat(appendSnapshot).isPresent();
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) appendSnapshot.get();
-    assertThatThrownBy(
-            () ->
-                catalog
-                    .loadTable(TABLE)
-                    .io()
-                    .newInputFile(addSnapshot.snapshot().manifestListLocation()))
-        .isInstanceOf(NotFoundException.class);
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(TABLE));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest request = (UpdateTableRequest) req.body();
+              Optional<MetadataUpdate> appendSnapshot =
+                  request.updates().stream()
+                      .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
+                      .findFirst();
+
+              assertThat(appendSnapshot).isPresent();
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) appendSnapshot.get();
+              String manifestListLocation = addSnapshot.snapshot().manifestListLocation();
+              assertThatThrownBy(
+                      () -> catalog.loadTable(TABLE).io().newInputFile(manifestListLocation))
+                  .isInstanceOf(NotFoundException.class);
+            });
   }
 
   @Test
@@ -2609,29 +2454,32 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
     catalog.createTable(TABLE, SCHEMA);
     Mockito.doThrow(new ServiceFailureException("some service failure"))
         .when(adapter)
-        .post(eq(RESOURCE_PATHS.table(TABLE)), any(), any(), any(Map.class), any());
-    ArgumentCaptor<UpdateTableRequest> captor = ArgumentCaptor.forClass(UpdateTableRequest.class);
+        .execute(reqMatcher(HTTPMethod.POST, RESOURCE_PATHS.table(TABLE)), any(), any(), any());
+
     Transaction replaceTableTransaction = catalog.newReplaceTableTransaction(TABLE, SCHEMA, false);
     replaceTableTransaction.newAppend().appendFile(FILE_A).commit();
     assertThatThrownBy(replaceTableTransaction::commitTransaction)
         .isInstanceOf(ServiceFailureException.class);
-    verify(adapter, atLeastOnce())
-        .post(eq(RESOURCE_PATHS.table(TABLE)), captor.capture(), any(), any(Map.class), any());
-    UpdateTableRequest request = captor.getValue();
-    Optional<MetadataUpdate> appendSnapshot =
-        request.updates().stream()
-            .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
-            .findFirst();
-    assertThat(appendSnapshot).isPresent();
 
-    MetadataUpdate.AddSnapshot addSnapshot = (MetadataUpdate.AddSnapshot) appendSnapshot.get();
-    assertThat(
-            catalog
-                .loadTable(TABLE)
-                .io()
-                .newInputFile(addSnapshot.snapshot().manifestListLocation())
-                .exists())
-        .isTrue();
+    assertThat(allRequests(adapter))
+        .anySatisfy(
+            req -> {
+              assertThat(req.method()).isEqualTo(HTTPMethod.POST);
+              assertThat(req.path()).isEqualTo(RESOURCE_PATHS.table(TABLE));
+              assertThat(req.body()).isInstanceOf(UpdateTableRequest.class);
+              UpdateTableRequest request = (UpdateTableRequest) req.body();
+              Optional<MetadataUpdate> appendSnapshot =
+                  request.updates().stream()
+                      .filter(update -> update instanceof MetadataUpdate.AddSnapshot)
+                      .findFirst();
+              assertThat(appendSnapshot).isPresent();
+
+              MetadataUpdate.AddSnapshot addSnapshot =
+                  (MetadataUpdate.AddSnapshot) appendSnapshot.get();
+              String manifestListLocation = addSnapshot.snapshot().manifestListLocation();
+              assertThat(catalog.loadTable(TABLE).io().newInputFile(manifestListLocation).exists())
+                  .isTrue();
+            });
   }
 
   @Test
@@ -2645,19 +2493,13 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
 
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.GET),
-            eq("v1/config"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.GET, "v1/config", Map.of(), Map.of()),
             eq(ConfigResponse.class),
             any(),
             any());
     Mockito.verify(adapter)
         .execute(
-            eq(HTTPMethod.HEAD),
-            eq("v1/namespaces/non-existing"),
-            any(),
-            any(),
+            reqMatcher(HTTPMethod.HEAD, "v1/namespaces/non-existing", Map.of(), Map.of()),
             any(),
             any(),
             any());
@@ -2671,5 +2513,52 @@ public class TestRESTCatalog extends CatalogTests<RESTCatalog> {
         ImmutableMap.of(
             CatalogProperties.FILE_IO_IMPL, "org.apache.iceberg.inmemory.InMemoryFileIO"));
     return catalog;
+  }
+
+  static HTTPRequest reqMatcher(HTTPMethod method) {
+    return argThat(req -> req.method() == method);
+  }
+
+  static HTTPRequest reqMatcher(HTTPMethod method, String path) {
+    return argThat(req -> req.method() == method && req.path().equals(path));
+  }
+
+  static HTTPRequest reqMatcher(HTTPMethod method, String path, Map<String, String> headers) {
+    return argThat(
+        req ->
+            req.method() == method
+                && req.path().equals(path)
+                && req.headers().equals(HTTPHeaders.of(headers)));
+  }
+
+  static HTTPRequest reqMatcher(
+      HTTPMethod method, String path, Map<String, String> headers, Map<String, String> parameters) {
+    return argThat(
+        req ->
+            req.method() == method
+                && req.path().equals(path)
+                && req.headers().equals(HTTPHeaders.of(headers))
+                && req.queryParameters().equals(parameters));
+  }
+
+  static HTTPRequest reqMatcher(
+      HTTPMethod method,
+      String path,
+      Map<String, String> headers,
+      Map<String, String> parameters,
+      Object body) {
+    return argThat(
+        req ->
+            req.method() == method
+                && req.path().equals(path)
+                && req.headers().equals(HTTPHeaders.of(headers))
+                && req.queryParameters().equals(parameters)
+                && Objects.equals(req.body(), body));
+  }
+
+  private static List<HTTPRequest> allRequests(RESTCatalogAdapter adapter) {
+    ArgumentCaptor<HTTPRequest> captor = ArgumentCaptor.forClass(HTTPRequest.class);
+    verify(adapter, atLeastOnce()).execute(captor.capture(), any(), any(), any());
+    return captor.getAllValues();
   }
 }
